package(default_visibility = ["//visibility:public"])
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

java_binary(
    name = "RocksDBSample",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "es.ceracloud.rocksdb.RocksDBSample",
    runtime_deps = [
        "@maven//:org_rocksdb_rocksdbjni",
    ],
    deps = [
        "@maven//:org_rocksdb_rocksdbjni",
    ],
)

java_binary(
    name = "TransactionSample",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "es.ceracloud.rocksdb.TransactionSample",
    runtime_deps = [
        "@maven//:org_rocksdb_rocksdbjni",
    ],
    deps = [
        "@maven//:org_rocksdb_rocksdbjni",
    ],
)

